IE infowindow overflow fix

--- a/Root/CSS/Base/Info_window.css
+++ b/Root/CSS/Base/Info_window.css
@@ -39,6 +39,10 @@
 	text-align: center;
 }
 
+.gm-style-iw-d {
+	overflow: hidden
+}
+
 #show_address_button {
 	width: 26px;
 	vertical-align: bottom;
